[package]
name = "csv2vviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
csv = "1.2.2"
regex = "1.8.4"
clap = { version = "4.3.9", features = ["derive"] }
euclid = "0.22.9"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate"]
